image upload is done with jwt token
