# docs/swagger.json
@@ -763,15 +763,6 @@
                         "required": true
                     },
                     {
-                        "description": "User identity information",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.ImageUploadRequest"
-                        }
-                    },
-                    {
                         "type": "file",
                         "description": "Image file to upload",
                         "name": "image",
@@ -944,21 +935,6 @@
                 },
                 "weight": {
                     "type": "number"
-                }
-            }
-        },
-        "models.ImageUploadRequest": {
-            "type": "object",
-            "required": [
-                "cnumber",
-                "username"
-            ],
-            "properties": {
-                "cnumber": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
                 }
             }
         },
